# withingpy

./: 404.html  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  release.yml
CHANGELOG/: index.html
cli/: index.html
docs/: CHANGELOG.md  api.md  index.md  usage.md
docs/config/: app_creation.md
ref/client/: index.html
ref/models/: index.html
search/: search_index.json
setup/app_creation/: index.html
setup/authorize/: index.html
src/withingpy/: __init__.py  cli.py  models.py  withings_api_client.py
usage/: index.html
