[project]
name = "withingpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ian Day", email = "ian@ianday.me" }
]
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pydantic>=2.11.5",
    "tenacity>=9.1.2",
    "typer>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
withings-cli = "withingpy.cli:app"
