[project]
name = "withingpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ian Day", email = "ian@ianday.me" }
]
requires-python = ">=3.12"
dependencies = [

    "pydantic>=2.11.5",
    "tenacity>=9.1.2",
    "typer>=0.15.4",
]
[dependency-groups]
doc = [
  "mkdocs  (>=1.6,<1.7)",
  "mkdocs-autorefs (>=1.2,<1.3)",
  "mkdocs-get-deps (>=0.2,<0.3)",
  "mkdocs-glightbox (>=0.4,<0.5)",
  "mkdocs-material (>=9.5,<9.6)",
  "mkdocs-material-extensions (>=1.3,<1.4)",
  "mkdocstrings[python] (>=0.26,<0.27)"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
withings-cli = "withingpy.cli:app"
